# aws_tf_infrastructure

./: README.md
data-pipelines-clean/pipelines/: orchestrator.py  setup.cfg
data-pipelines-clean/pipelines/flows/: dbt_flow.py
data-pipelines-clean/pipelines/flows/DataSource2/: DataSource2_title_match.py  get_titles_to_match.sql  update_title_matches.sql
data-pipelines-clean/pipelines/flows/data_source1/: CLIENTNAME_dar.py  cdn_logs.py  ft_dar.sql  glue_script.py
data-pipelines-clean/pipelines/flows/outlook/vendor3/: vendor3_flows.py  vendor3_revenue.sql
data-pipelines-clean/pipelines/flows/outlook/vendor4/: vendor4.sql  vendor4_flow.py
data-pipelines-clean/pipelines/flows/outlook/vendor5/: vendor5.sql  vendor5_flow.py
data-pipelines-clean/pipelines/flows/outlook/vendor6/: vendor6_finance.sql  vendor6_flow.py
data-pipelines-clean/pipelines/flows/outlook/vendor7/: vendor7.sql  vendor7_flow.py
data-pipelines-clean/pipelines/flows/vendor1/: _test.py  basic_metrics.sql  demographics.sql  device_type.sql  finance_data.sql  traffic_source.sql  vendor1_reports.py
data-pipelines-clean/pipelines/flows/vendor2/: global_item_availability.sql  item_sources.sql  items.sql  shows.sql  sources.sql  vendor2_flow.py  vendor2_glue.py  vendor2_glue_get_schema.py
data-pipelines-clean/pipelines/src/CLIENTNAME_pipelines/config/: __init__.py  _base_config.py  _config.py  aws.py  prefect.py  snowflake.py
data-pipelines-clean/pipelines/src/CLIENTNAME_pipelines/core/: CLIENTNAME_flow.py  __init__.py
data-pipelines-clean/pipelines/src/CLIENTNAME_pipelines/tasks/: archive.py  (+5 more)
(+67 files in other folders)
