[metadata]
name = CLIENTNAME_pipelines
version = 0.0.1
author = Eric Miller
author_email = eric.miller@caserta.com
description = Data pipelines for CLIENTNAME
long_description = file: README.md
long_description_content_type = text/markdown
url = http://XX.XX.XX.XX/data-dev/CLIENTNAME-data-pipelines
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
     = src
python_requires = >=3.6
install_requires = 
    pycryptodome
    boto3

[options.packages.find]
where = src